--- a/burger_king.html
+++ b/burger_king.html
@@ -12,6 +12,7 @@
         <!-- <h1>Hola Que tal ? </h1> -->
         <input type="number" name="Numero" value="1" min="1"></input>
         <input type="submit" name="Entrar"></input>
+        <h1>Hello</h1>
     </form>
 </body>
 
